<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/Titulo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matricula" />

        <EditText
            android:id="@+id/matriculatext"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/matricula"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nombretext"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/apellidotext"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facultad" />

        <EditText
            android:id="@+id/facultadtext"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/facultad"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/correotext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:hint="@string/correoex"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ingreso" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>